@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://maven.apache.org/surefire/maven-surefire-plugin/xsd/surefire-test-report.xsd" name="com.companyname.bank.AppTest" time="0.033" tests="1" errors="0" skipped="0" failures="0">
+<testsuite xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://maven.apache.org/surefire/maven-surefire-plugin/xsd/surefire-test-report.xsd" name="com.companyname.bank.AppTest" time="0.035" tests="1" errors="0" skipped="0" failures="0">
   <properties>
     <property name="gopherProxySet" value="false"/>
     <property name="awt.toolkit" value="sun.lwawt.macosx.LWCToolkit"/>
@@ -17,7 +17,7 @@
     <property name="sun.java.launcher" value="SUN_STANDARD"/>
     <property name="user.country" value="IN"/>
     <property name="sun.boot.library.path" value="/Library/Java/JavaVirtualMachines/jdk-9.0.1.jdk/Contents/Home/lib"/>
-    <property name="sun.java.command" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter16344719689894142332.jar /Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire 2018-10-25T20-59-57_681-jvmRun1 surefire18064592651278325910tmp surefire_018313264953521559697tmp"/>
+    <property name="sun.java.command" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter1742570742631254294.jar /Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire 2018-10-25T21-09-21_026-jvmRun1 surefire12867057277220190908tmp surefire_017622264647701007072tmp"/>
     <property name="jdk.debug" value="release"/>
     <property name="surefire.test.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/test-classes:/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/classes:/Users/ashishsrivastava/.m2/repository/junit/junit/4.11/junit-4.11.jar:/Users/ashishsrivastava/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar:"/>
     <property name="sun.cpu.endian" value="little"/>
@@ -32,7 +32,7 @@
     <property name="java.vm.specification.vendor" value="Oracle Corporation"/>
     <property name="java.specification.name" value="Java Platform API Specification"/>
     <property name="java.awt.graphicsenv" value="sun.awt.CGraphicsEnvironment"/>
-    <property name="surefire.real.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter16344719689894142332.jar"/>
+    <property name="surefire.real.class.path" value="/Users/ashishsrivastava/ashish/CryTec/helloWorld/target/surefire/surefirebooter1742570742631254294.jar"/>
     <property name="sun.management.compiler" value="HotSpot 64-Bit Tiered Compilers"/>
     <property name="java.runtime.version" value="9.0.1+11"/>
     <property name="user.name" value="ashish.srivastava"/>
@@ -57,5 +57,5 @@
     <property name="sun.io.unicode.encoding" value="UnicodeBig"/>
     <property name="java.class.version" value="53.0"/>
   </properties>
-  <testcase name="shouldAnswerWithTrue" classname="com.companyname.bank.AppTest" time="0.002"/>
+  <testcase name="shouldAnswerWithTrue" classname="com.companyname.bank.AppTest" time="0.003"/>
 </testsuite>
