@@ -1,4 +1,4 @@
 -------------------------------------------------------------------------------
 Test set: com.companyname.bank.AppTest
 -------------------------------------------------------------------------------
-Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.033 s - in com.companyname.bank.AppTest
+Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.035 s - in com.companyname.bank.AppTest
